# cookiecutter-rust

./: README.md  cookiecutter.json
hooks/: post_gen_project.py
{{ cookiecutter.project_slug }}/: Cargo.toml  README.md
{{ cookiecutter.project_slug }}/docs/: config.toml
{{ cookiecutter.project_slug }}/docs/content/: _index.md
{{ cookiecutter.project_slug }}/docs/content/docs/getting-started/: introduction.md
